k8s/cert.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksdump
  namespace: booksdump
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Disposition,Content-Type';
      proxy_set_header        X-Real-IP       $remote_addr;
      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - booksdump.com
        - www.booksdump.com
      secretName: ingress-nginx-booksdump-tls
  rules:
    - host: "booksdump.com"
      http:
        paths:
          - path: "/opds(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: external-gopds
                port:
                  number: 80
          - path: "/api/.*"
            pathType: Prefix
            backend:
              service:
                name: external-gopds
                port:
                  number: 80
          - path: "/.*"
            pathType: Prefix
            backend:
              service:
                name: booksdump
                port:
                  number: 80
          - path: "/books/"
            pathType: Prefix
            backend:
              service:
                name: booksdump
                port:
                  number: 80
    - host: "www.booksdump.com"
      http:
        paths:
          - path: "/opds(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: external-gopds
                port:
                  number: 80
          - path: "/api/.*"
            pathType: Prefix
            backend:
              service:
                name: external-gopds
                port:
                  number: 80
          - path: "/.*"
            pathType: Prefix
            backend:
              service:
                name: booksdump
                port:
                  number: 80

    - host: "cdn.booksdump.com"
      http:
        paths:
          - path: "/.*"
            pathType: Prefix
            backend:
              service:
                name: booksdump
                port:
                  number: 80
